# missout-ai-agent

./: .env  .env.example  .gitignore  .replit  ANCHOR_DESERIALIZATION_FIX.md  API_REFERENCE.md  AVATAR_FIX_COMPLETE.md  CLAIM_FIXES.md  CLAIM_REFUND_RENT_COMPLETE_FIX.md  CLIENT_TSCONFIG_FIX.md  COMPREHENSIVE_PROJECT_AUDIT.md  DATABASE_FIX.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  DISCRIMINATOR_FIX.md  FAUCET_IMPLEMENTATION.md  FINAL_ANCHOR_FIX.md  FINAL_FIXES_COMPLETE.md  FIXES_APPLIED.md  FIXES_LOGO_AND_FAUCET.md  FIXES_URGENT.md  GCS_UPLOAD_FIX.md  GRACEFUL_SHUTDOWN_PRODUCTION_READY.md  IDL_CLEANUP_COMPLETE.md  IMPLEMENTATION_COMPLETE_2026-01-08.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  PAGINATION_FIX.md  PLATFORM_OVERVIEW.md  POOL_MONITOR_CORRECTED.md  POOL_MONITOR_IMPLEMENTATION.md  POSTGRESQL_CONNECTION_FIX.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_SETUP.md  QUICKSTART.md  QUICK_START.md  RACE_CONDITION_FIX.md  README.md  RENDER_BUILD_FIXES.md  (+35 more)
attached_assets/: Pasted-Context-I-have-a-fully-working-Solana-dApp-cosmic-lotte_1767744887880.txt  Pasted-I-want-to-implement-a-proper-Leaderboard-experience-Ren_1767745840192.txt  Pasted-On-chain-each-pool-already-sends-1-5-of-the-pool-to-a-t_1767743158236.txt  Pasted-TASK-mbun-t-e-te-experien-a-vizual-i-auditiv-a-flow-ulu_1767738955338.txt
client/: FIX_INSTRUCTIONS.md  index.html  package-lock.json  package.json  requirements.md  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
migrations/: 001_security_fixes.sql  APPLY_MIGRATIONS.md  add_claim_tracking.sql  apply.sh  referral_claim_fix.ts
ml/: Cargo.toml
ml/src/: constants.rs  errors.rs  lib.rs  state.rs
ml/src/instructions/: admin_close_pool.rs  cancel_pool.rs  claim_refund.rs  create_pool.rs  donate.rs  finalize_forfeited_pool.rs  join_pool.rs  pause_pool.rs  payout_winner.rs  select_winner.rs  set_lock_duration.rs  sweep_expired_pool.rs  unlock_pool.rs
ml_contract/: Anchor.toml  Cargo.toml
ml_contract/programs/ml/: Cargo.toml
ml_contract/programs/ml/src/: errors.rs  events.rs  lib.rs  state.rs  utils.rs
ml_contract/programs/ml/src/instructions/: admin_close_pool.rs  cancel_pool.rs  claim_refund.rs  claim_rent.rs  create_pool.rs  donate.rs  finalize_forfeited_pool.rs  join_pool.rs  mod.rs  payout_winner.rs  request_randomness.rs  select_winner.rs  sweep_expired_pool.rs
rust-analyzer/: Cargo.toml  README.md
rust-analyzer/src/: main.rs
rust-analyzer/src/analysis/: detectors.rs  mod.rs  patterns.rs
script/: build-server.ts  build.ts  reset-pools.ts
scripts/: build-rust.sh  migrate-database.sh
server/: .gitignore  db.ts  (+29 more)
(+162 files in other folders)
