[package]
name = "ml"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ml"
path = "src/lib.rs"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
switchboard-on-demand = "0.9.3"
sha2 = "0.10.8"

# Correct Rust crate versions for Anchor 0.31.1
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "8.0.0", features = ["no-entrypoint"] }

[features]
cpi = []
custom-heap = []
custom-panic = []
anchor-debug = []
mainnet = []
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-spl/idl-build"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }



